--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	Coming soon is a website that is similar in style to minimalist gems, like <a href="https://www.over-yonder.net/~fullermd/">this one</a>. It will use a setup similar to the one described <a href="https://code.tutsplus.com/tutorials/the-perfect-workflow-with-git-github-and-ssh--net-19564/">here</a> to update the site and the applications (<a href="https://shiny.rstudio.com/">Shiny</a> and Python) that run on this server without having to SSH into the server to make changes. <a href="http://quaere-verum.com/">Quaere Verum</a> will be shut down in the coming weeks because Amazon's 'free' AWS EC2 ennded up costing significantly more than the advertised price ($0). Besides then opaque billing, the 'free' tier was vastly underpowered for the applications I want to run on it, like the <a href="http://quaere-verum.com:3838/flavor/">flavor web</a>. 
 	</p>
 	<p>
-	Is this working yet?
+	Is this working yet? Looks like it just might.
 	</p>
   </body>
 </html>
