--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <html>
   <head>
     <title>Derek Hodgson</title> 
-	<style>
-		body {background-color: grey}
-		body {"Palatino Linotype", "Book Antiqua", Palatino, serif}
-	</style>	
+	<link rel="stylesheet" href="support/SiteCSS" />	  
   </head>
   <body>
     <h1>Derek Hodgson -- Data Manipulation, Visualization, and Analysis with R and Python</h1>
