--- a/index.html
+++ b/index.html
@@ -12,4 +12,43 @@
 	Looks like git pull will work, so long as there aren't any changes in the meantime on the server.
 	</p>
   </body>
+
+<div id="navmeta">
+    <div id="nav">
+     <ul>
+      <li><span class="fakelink">Home</span></li>
+      
+ <li>
+<a href="./matt">Matt Stats</a>
+ </li>
+
+ <li>
+<a href="./resume">Matt's Resume</a>
+ </li>
+
+ <li>
+<a href="./friends">Matt's Friends</a>
+ </li>
+
+ <li>
+<a href="./links">Links</a>
+ </li>
+
+ <li>
+<a href="./projects">Matt's Projects</a>
+ </li>
+
+ <li>
+<a href="./rants">Matt Rants</a>
+ </li>
+
+ <li>
+<a href="./about">About This Page</a>
+ </li>
+
+ <li>
+<a href="./afterthoughts">Afterthoughts</a>
+ </li>
+
+	
 </html>
