--- a/index.html
+++ b/index.html
@@ -1,10 +1,54 @@
-<html>
-  <head>
-    <title>Derek Hodgson</title> 
-	<link rel="stylesheet" href="support/SiteCSS" />
-  </head>
-  <body>
-    <h1>Derek Hodgson -- Data Manipulation, Visualization, and Analysis with R and Python</h1>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+	"http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
+ <head>
+  <title>Copyright Information</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="start" title="Matt's Homepage" href="./">
+  <link rel="author" title="Matt's Email" href="mailto:fullermd@over-yonder.net">
+  <link rel="copyright" title="Copyright" href="./copyright">
+  <link rel="shortcut icon" href="./pic/mdf.ico">
+  <!--
+  <link rel='stylesheet' type='text/css'
+    href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700">
+    -->
+  <link rel="stylesheet" type="text/css" media="all" id="sslink"
+
+    href="support/SiteCSS">
+
+  <link rel="stylesheet" type="text/css" media="print"
+    href="./print.css">
+
+
+  <script type="text/javascript" src="./style.js"></script>
+  <script type="text/javascript">
+   basepath = "./";
+   csspath = "./";
+   onload_set_ss();
+  </script>
+ </head>
+ <body>
+  <div style="display:none;">
+   <p>
+    Your browser doesn't seem to support
+    <a href="http://www.w3.org/Style/CSS/">CSS</a>,
+    which this page uses for all styling.  Don't be surprised if it looks
+    kinda boring.
+   </p>
+   <p>
+    <a href="#navmeta">[Jump to nav]</a>
+   </p>
+  </div>
+
+  <div id="header">
+   <h1>Copyright and related Information</h1>
+  </div>
+
+  <div id="main">
+   <div id="cwrap">
+    <div id="content">
+     <h1>Derek Hodgson -- Data Manipulation, Visualization, and Analysis with R and Python</h1>
 	<p>
 	Coming soon is a website that is similar in style to minimalist gems, like <a href="https://www.over-yonder.net/~fullermd/">this one</a>. It will use a setup similar to the one described <a href="https://code.tutsplus.com/tutorials/the-perfect-workflow-with-git-github-and-ssh--net-19564/">here</a> to update the site and the applications (<a href="https://shiny.rstudio.com/">Shiny</a> and Python) that run on this server without having to SSH into the server to make changes. <a href="http://quaere-verum.com/">Quaere Verum</a> will be shut down in the coming weeks because Amazon's 'free' AWS EC2 ennded up costing significantly more than the advertised price ($0). Besides then opaque billing, the 'free' tier was vastly underpowered for the applications I want to run on it, like the <a href="http://quaere-verum.com:3838/flavor/">flavor web</a>. 
 	</p>
@@ -26,9 +70,12 @@ Nam ut erat diam. Maecenas dui ligula, dictum ut purus ac, vehicula egestas urna
 	<p>  
 Proin laoreet blandit dictum. Nam euismod magna non ligula euismod, sed congue nisl vestibulum. Phasellus euismod at nulla et auctor. Vestibulum ullamcorper tincidunt lacus, a scelerisque eros pretium a. Morbi mollis id odio a pulvinar. Morbi ornare nunc mauris, eu ultrices metus consequat sit amet. Suspendisse ornare dolor quis varius blandit. Vivamus quis dolor vel nibh rhoncus dignissim. Donec placerat placerat dolor in elementum. Donec vehicula nec ligula id tempor. Donec enim erat, tempor eget tempor vel, porttitor eget dui. Vivamus eu purus nec dolor tincidunt ornare. In hendrerit libero ante, a porta lectus pharetra et. Pellentesque a venenatis leo. Nulla luctus arcu in rutrum egestas.
 	</p>
-	  
-  </body>
 
+	
+
+
+    </div>
+   </div>
 <div id="navmeta">
     <div id="nav">
      <ul>
@@ -82,5 +129,30 @@ Proin laoreet blandit dictum. Nam euismod magna non ligula euismod, sed congue n
      
     </div>
    </div>
-	
+  </div>
+
+  
+
+  <div id="footer">
+   <ul class="inline">
+    <li><a href="https://www.freebsd.org/">Powered&nbsp;by&nbsp;FreeBSD</a></li>
+    <li><a href="https://www.perl.org/">Powered&nbsp;by&nbsp;Perl</a></li>
+    <li><a href="http://thomer.com/vi/vi.html">Vi&nbsp;Powered</a></li>
+   </ul>
+   <ul class="inline">
+    <li><a href="https://www.w3.org/WAI/WCAG1A-Conformance">W3C-WCAG&nbsp;A</a></li>
+    <li><a href="https://validator.w3.org/check/referer">Valid&nbsp;HTML&nbsp;4.01</a></li>
+    <li><a href="https://jigsaw.w3.org/css-validator/check/referer">Valid&nbsp;CSS</a></li>
+   </ul>
+   <p>
+    &copy;1996-2016 <a href="./copyright">Matthew D. Fuller</a>
+    [<a href="mailto:fullermd@over-yonder.net">email</a>]
+   </p>
+  </div>
+
+ <script type="text/javascript">
+  document.getElementById('colschsub').style.display = 'none';
+  ssel_set();
+ </script>
+ </body>
 </html>
