--- a/index.html
+++ b/index.html
@@ -42,87 +42,37 @@
   </div>
 
   <div id="header">
-   <h1>Copyright and related Information</h1>
+   <h1>Derek Hodgson -- Data Manipulation, Visualization, and Analysis with R and Python</h1>
   </div>
 
   <div id="main">
    <div id="cwrap">
     <div id="content">
-     
-<h2>
-Copyright and usage information
-</h2>
-<h3>
-Copyright
-</h3>
-<p>
-This website is Copyright &copy;1996-2016
-<a href="mailto:fullermd@over-yonder.net">
-Matthew D. Fuller</a>.
-All rights reserved.
-</p>
-<p>
-All art works on the page are the property of their original creator.
-</p>
-<h3>
-Linking
-</h3>
-<p>
-Though it's perhaps redundant, since I can't stop you, you are
-more than welcome to link to any content I have here.
-I can't promise that everything will always remain in the same place;
-occasionally, some pages might move around a bit.
-I try very hard to avoid causing or falling victim to linkrot,
-and in the event that I HAVE to move something, I will generally
-leave a redirect page for a while at least.
-Link higher up in the tree to make it less likely that you'll get
-bitten.
-</p>
-<h3>
-Reproduction of content
-</h3>
-<p>
-Reproduction in full in online forms is discouraged; please just link to
-the originals.
-Short quotation of the full form is permitted; however, you should
-provide a link to the full original text.
-</p>
-<p>
-Reproduction for non-commercial and non-profit purposes is permitted free
-of charge, on the condition that full credit is given, and a reference
-to the original source (this page) is made.
-</p>
-<p>
-Reproduction for commercial or for-profit purposes is forbidden, except
-by explicit agreement.
-This doesn't mean I'm unlikely to enter into such an agreement.
-It just means you will need to
-<a href="mailto:fullermd@over-yonder.net">
-contact me</a>
-to work out an arrangement for it.
-</p>
-<h3>
-Stylesheets and Artwork
-</h3>
-<p>
-My stylesheets are the end product of years of blood, sweat, and
-tears, of thousands of hours of grinding hard work, and endless toil.
-Fortunately, not much of it was mine.
-If you can extract inspiration, you're welcome to use them as models
-and examples.
-For that matter, take the whole things and use them verbatim.
-Insert cute little comments into your stylesheets crediting me if you
-do so.
-</p>
-<p>
-If you choose to use my stylesheets, or any of the images on my page,
-please make a copy and store it on your server, rather than loading it
-off mine.
-It's suggested (though by no means required) that you
-<a href="mailto:fullermd@over-yonder.net">
-send me an email</a>
-if you do so, just to let me know.
-</p>
+
+    <h2>Introduction</h2>
+	<p>
+	Coming soon is a website that is similar in style to minimalist gems, like <a href="https://www.over-yonder.net/~fullermd/">this one</a>. It will use a setup similar to the one described <a href="https://code.tutsplus.com/tutorials/the-perfect-workflow-with-git-github-and-ssh--net-19564/">here</a> to update the site and the applications (<a href="https://shiny.rstudio.com/">Shiny</a> and Python) that run on this server without having to SSH into the server to make changes. <a href="http://quaere-verum.com/">Quaere Verum</a> will be shut down in the coming weeks because Amazon's 'free' AWS EC2 ennded up costing significantly more than the advertised price ($0). Besides then opaque billing, the 'free' tier was vastly underpowered for the applications I want to run on it, like the <a href="http://quaere-verum.com:3838/flavor/">flavor web</a>. 
+	</p>
+	<p>
+	Looks like git pull will work, so long as there aren't any changes in the meantime on the server.
+	</p>
+	<p>
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus ligula non finibus maximus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse et fermentum risus. Maecenas at ipsum ex. Aenean ac nulla rutrum, laoreet diam vel, gravida metus. Sed aliquet consectetur ex ut pulvinar. Aenean commodo eu augue at molestie. Nullam id rhoncus diam. Vivamus in libero aliquam, venenatis risus eget, maximus elit. Morbi egestas sem vel justo ultrices condimentum non in diam. Morbi consectetur id nibh ut fringilla. Fusce volutpat arcu eget diam dictum hendrerit. Vestibulum pellentesque congue lorem, vel ornare nibh fermentum ac. Integer ullamcorper felis in euismod dignissim. Nunc bibendum ante turpis. Vestibulum malesuada pharetra gravida.
+	</p>
+	<p>
+Sed in sem leo. Donec faucibus tortor ut enim auctor, quis rhoncus tellus feugiat. Nulla luctus quis orci in maximus. Cras quis suscipit mauris. Mauris ut ultrices massa, sit amet suscipit dolor. Sed sit amet rhoncus mi, suscipit molestie nisi. Maecenas vulputate varius nibh, non porta massa venenatis scelerisque. Nullam rutrum, arcu in tincidunt dapibus, enim leo facilisis ex, viverra euismod justo dolor eu enim. Aenean sed laoreet ante. Donec mollis velit at nunc lacinia, in varius urna finibus. Vivamus interdum nibh ipsum, vitae suscipit erat suscipit sed.
+	</p>
+	<p>
+Fusce ac semper purus. Aliquam nec rutrum metus. Suspendisse id libero tellus. Ut bibendum augue ac magna mattis elementum. Sed nunc dui, mollis in mauris id, suscipit blandit dolor. Maecenas sodales tincidunt ex eget consectetur. Pellentesque scelerisque pretium sapien. Sed tempor efficitur efficitur. Cras fringilla turpis diam, eget porttitor magna pharetra in.
+	</p>
+	<p>
+Nam ut erat diam. Maecenas dui ligula, dictum ut purus ac, vehicula egestas urna. Nam aliquam, justo fringilla iaculis sollicitudin, risus augue fringilla turpis, in consectetur lacus sem eget libero. Nulla in molestie lacus, vel aliquet lacus. Nullam nec maximus eros. Pellentesque in diam in dui convallis rutrum a non neque. Pellentesque eget ullamcorper quam. Suspendisse potenti. Duis at quam quis nibh laoreet tincidunt. Duis tincidunt ornare augue sed tristique.
+	</p>
+	<p>  
+Proin laoreet blandit dictum. Nam euismod magna non ligula euismod, sed congue nisl vestibulum. Phasellus euismod at nulla et auctor. Vestibulum ullamcorper tincidunt lacus, a scelerisque eros pretium a. Morbi mollis id odio a pulvinar. Morbi ornare nunc mauris, eu ultrices metus consequat sit amet. Suspendisse ornare dolor quis varius blandit. Vivamus quis dolor vel nibh rhoncus dignissim. Donec placerat placerat dolor in elementum. Donec vehicula nec ligula id tempor. Donec enim erat, tempor eget tempor vel, porttitor eget dui. Vivamus eu purus nec dolor tincidunt ornare. In hendrerit libero ante, a porta lectus pharetra et. Pellentesque a venenatis leo. Nulla luctus arcu in rutrum egestas.
+	</p>
+
+
 
     </div>
    </div>
