--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	"http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
  <head>
-  <title>Copyright Information</title>
+  <title>Derek Hodgson</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="start" title="Matt's Homepage" href="./">
