--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <title>Derek Hodgson</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="start" title="Matt's Homepage" href="./">
-  <link rel="author" title="Matt's Email" href="mailto:fullermd@over-yonder.net">
-  <link rel="copyright" title="Copyright" href="./copyright">
+  <link rel="start" title="Derek's Homepage" href="./">
+  <link rel="author" title="Derek's Email" href="mailto:derek.a.hodgson@gmail.com">
   <link rel="shortcut icon" href="./pic/mdf.ico">
   <!--
   <link rel='stylesheet' type='text/css'
@@ -19,27 +18,6 @@
 
   <link rel="stylesheet" type="text/css" media="print"
     href="./print.css">
-
-
-  <script type="text/javascript" src="./style.js"></script>
-  <script type="text/javascript">
-   basepath = "./";
-   csspath = "./";
-   onload_set_ss();
-  </script>
- </head>
- <body>
-  <div style="display:none;">
-   <p>
-    Your browser doesn't seem to support
-    <a href="http://www.w3.org/Style/CSS/">CSS</a>,
-    which this page uses for all styling.  Don't be surprised if it looks
-    kinda boring.
-   </p>
-   <p>
-    <a href="#navmeta">[Jump to nav]</a>
-   </p>
-  </div>
 
   <div id="header">
    <h1>Derek Hodgson -- Data Manipulation, Visualization, and Analysis with R and Python</h1>
