--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
 	"http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
+<html>
  <head>
   <title>Derek Hodgson</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -18,7 +18,7 @@
 
   <link rel="stylesheet" type="text/css" media="print"
     href="./print.css">
-
+<body>
   <div id="header">
    <h1>Derek Hodgson -- Data Manipulation, Visualization, and Analysis with R and Python</h1>
   </div>
@@ -122,15 +122,7 @@ Proin laoreet blandit dictum. Nam euismod magna non ligula euismod, sed congue n
     <li><a href="https://validator.w3.org/check/referer">Valid&nbsp;HTML&nbsp;4.01</a></li>
     <li><a href="https://jigsaw.w3.org/css-validator/check/referer">Valid&nbsp;CSS</a></li>
    </ul>
-   <p>
-    &copy;1996-2016 <a href="./copyright">Matthew D. Fuller</a>
-    [<a href="mailto:fullermd@over-yonder.net">email</a>]
-   </p>
   </div>
 
- <script type="text/javascript">
-  document.getElementById('colschsub').style.display = 'none';
-  ssel_set();
- </script>
  </body>
 </html>
