--- a/index.html
+++ b/index.html
@@ -60,15 +60,7 @@ Proin laoreet blandit dictum. Nam euismod magna non ligula euismod, sed congue n
       <li><a href="./">Home</a></li>
       
  <li>
-<a href="./matt">Matt Stats</a>
- </li>
-
- <li>
-<a href="./resume">Matt's Resume</a>
- </li>
-
- <li>
-<a href="./friends">Matt's Friends</a>
+<a href="./resume">Derek's Resume</a>
  </li>
 
  <li>
@@ -76,19 +68,11 @@ Proin laoreet blandit dictum. Nam euismod magna non ligula euismod, sed congue n
  </li>
 
  <li>
-<a href="./projects">Matt's Projects</a>
- </li>
-
- <li>
-<a href="./rants">Matt Rants</a>
+<a href="./projects">Derek's Projects</a>
  </li>
 
  <li>
 <a href="./about">About This Page</a>
- </li>
-
- <li>
-<a href="./afterthoughts">Afterthoughts</a>
  </li>
 
      </ul>
@@ -110,7 +94,7 @@ Proin laoreet blandit dictum. Nam euismod magna non ligula euismod, sed congue n
   </div>
 
   
-
+<!--
   <div id="footer">
    <ul class="inline">
     <li><a href="https://www.freebsd.org/">Powered&nbsp;by&nbsp;FreeBSD</a></li>
@@ -123,6 +107,9 @@ Proin laoreet blandit dictum. Nam euismod magna non ligula euismod, sed congue n
     <li><a href="https://jigsaw.w3.org/css-validator/check/referer">Valid&nbsp;CSS</a></li>
    </ul>
   </div>
+-->
+
+
 
  </body>
 </html>
