--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 	Looks like git pull will work, so long as there aren't any changes in the meantime on the server.
 	</p>
 	<p>
+	Ananya is awesome.
+	</p>
+	<p>
 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus ligula non finibus maximus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse et fermentum risus. Maecenas at ipsum ex. Aenean ac nulla rutrum, laoreet diam vel, gravida metus. Sed aliquet consectetur ex ut pulvinar. Aenean commodo eu augue at molestie. Nullam id rhoncus diam. Vivamus in libero aliquam, venenatis risus eget, maximus elit. Morbi egestas sem vel justo ultrices condimentum non in diam. Morbi consectetur id nibh ut fringilla. Fusce volutpat arcu eget diam dictum hendrerit. Vestibulum pellentesque congue lorem, vel ornare nibh fermentum ac. Integer ullamcorper felis in euismod dignissim. Nunc bibendum ante turpis. Vestibulum malesuada pharetra gravida.
 	</p>
 	<p>
