--- a/index.html
+++ b/index.html
@@ -29,27 +29,11 @@
 
     <h2>Introduction</h2>
 	<p>
-	Coming soon is a website that is similar in style to minimalist gems, like <a href="https://www.over-yonder.net/~fullermd/">this one</a>. It will use a setup similar to the one described <a href="https://code.tutsplus.com/tutorials/the-perfect-workflow-with-git-github-and-ssh--net-19564/">here</a> to update the site and the applications (<a href="https://shiny.rstudio.com/">Shiny</a> and Python) that run on this server without having to SSH into the server to make changes. <a href="http://quaere-verum.com/">Quaere Verum</a> will be shut down in the coming weeks because Amazon's 'free' AWS EC2 ennded up costing significantly more than the advertised price ($0). Besides then opaque billing, the 'free' tier was vastly underpowered for the applications I want to run on it, like the <a href="http://quaere-verum.com:3838/flavor/">flavor web</a>. 
+		Welcome to Derek's Website. I hvae some of my projects up on here. Some are hosted web apps, while others are the results of analysis. Use the sidebar to navigate or just head to the <a href="/project/flavor-bible-network">most interesting thing on the site</a> or the <a href="/projects"> the project page</a>. 
 	</p>
 	<p>
-	Looks like git pull will work, so long as there aren't any changes in the meantime on the server.
+		
 	</p>
-	<p>
-	Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus ligula non finibus maximus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse et fermentum risus. Maecenas at ipsum ex. Aenean ac nulla rutrum, laoreet diam vel, gravida metus. Sed aliquet consectetur ex ut pulvinar. Aenean commodo eu augue at molestie. Nullam id rhoncus diam. Vivamus in libero aliquam, venenatis risus eget, maximus elit. Morbi egestas sem vel justo ultrices condimentum non in diam. Morbi consectetur id nibh ut fringilla. Fusce volutpat arcu eget diam dictum hendrerit. Vestibulum pellentesque congue lorem, vel ornare nibh fermentum ac. Integer ullamcorper felis in euismod dignissim. Nunc bibendum ante turpis. Vestibulum malesuada pharetra gravida.
-	</p>
-	<p>
-Sed in sem leo. Donec faucibus tortor ut enim auctor, quis rhoncus tellus feugiat. Nulla luctus quis orci in maximus. Cras quis suscipit mauris. Mauris ut ultrices massa, sit amet suscipit dolor. Sed sit amet rhoncus mi, suscipit molestie nisi. Maecenas vulputate varius nibh, non porta massa venenatis scelerisque. Nullam rutrum, arcu in tincidunt dapibus, enim leo facilisis ex, viverra euismod justo dolor eu enim. Aenean sed laoreet ante. Donec mollis velit at nunc lacinia, in varius urna finibus. Vivamus interdum nibh ipsum, vitae suscipit erat suscipit sed.
-	</p>
-	<p>
-Fusce ac semper purus. Aliquam nec rutrum metus. Suspendisse id libero tellus. Ut bibendum augue ac magna mattis elementum. Sed nunc dui, mollis in mauris id, suscipit blandit dolor. Maecenas sodales tincidunt ex eget consectetur. Pellentesque scelerisque pretium sapien. Sed tempor efficitur efficitur. Cras fringilla turpis diam, eget porttitor magna pharetra in.
-	</p>
-	<p>
-Nam ut erat diam. Maecenas dui ligula, dictum ut purus ac, vehicula egestas urna. Nam aliquam, justo fringilla iaculis sollicitudin, risus augue fringilla turpis, in consectetur lacus sem eget libero. Nulla in molestie lacus, vel aliquet lacus. Nullam nec maximus eros. Pellentesque in diam in dui convallis rutrum a non neque. Pellentesque eget ullamcorper quam. Suspendisse potenti. Duis at quam quis nibh laoreet tincidunt. Duis tincidunt ornare augue sed tristique.
-	</p>
-	<p>  
-Proin laoreet blandit dictum. Nam euismod magna non ligula euismod, sed congue nisl vestibulum. Phasellus euismod at nulla et auctor. Vestibulum ullamcorper tincidunt lacus, a scelerisque eros pretium a. Morbi mollis id odio a pulvinar. Morbi ornare nunc mauris, eu ultrices metus consequat sit amet. Suspendisse ornare dolor quis varius blandit. Vivamus quis dolor vel nibh rhoncus dignissim. Donec placerat placerat dolor in elementum. Donec vehicula nec ligula id tempor. Donec enim erat, tempor eget tempor vel, porttitor eget dui. Vivamus eu purus nec dolor tincidunt ornare. In hendrerit libero ante, a porta lectus pharetra et. Pellentesque a venenatis leo. Nulla luctus arcu in rutrum egestas.
-	</p>
-
 
 
     </div>
