--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 	<p>
 		This website is in its early stages of development, so if you have any comments or questions, <a href="mailto:derek.a.hodgson@gmail.com">contact me</a>.
 	</p>
+	<p>
+		I'll be adding a lot of content as my other projects mature, so check back.
+	</p>
 
 
     </div>
