--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <h2>Introduction</h2>
 	<p>
-		Welcome to Derek's Website. I hvae some of my projects up on here. Some are hosted web apps, while others are the results of analysis. Use the sidebar to navigate or just head to what I think is the <a href="/project/flavor-bible-network">most interesting thing on the site</a> or the <a href="/projects"> the project page</a>. 
+		Welcome to Derek's Website. I hvae some of my projects up on here. Some are hosted web apps, while others are the results of analysis. Use the sidebar to navigate or just head to what I think is the <a href="/project/flavor-bible-network">most interesting thing on the site</a> or to the <a href="/projects"> the project page</a>. 
 	</p>
 	<p>
 		This website is in its early stages of development, so if you have any comments or questions, <a href="mailto:derek.a.hodgson@gmail.com">contact me</a>.
