--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 	<p>
 		I'll be adding a lot of content as my other projects mature, so check back.
 	</p>
+	<p>
+		So, the automatic php GitHub "git pull" worked.
+	</p>
 
 
     </div>
