--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
 		This website is in its early stages of development, so if you have any comments or questions, contact me.
 	</p>
 	<p>
-		I'll be adding a lot of content as my other projects mature, so check back.
+		I'll be adding a lot of content as my other projects mature, so check back. Like a lot of others, starting personal projects can be very exciting, and I often get a lot done initally. Finishing up that last 10-50% seems like a much larger task than it is. Having somethere to put what I've done seems to be motivating me to really put the time in to finish up what I'd previously started.
 	</p>
 	<p>
-		
+		Building web applets is surprisingly simple due to the sophisticated tools that others have built. I can now access some of tools I've made just by going on a website.
+	</p>
+	<p>
+		The next things I'll be learning are based around Apache Hadoop or related technology, like Apache Pig. The IT challenges surrounding this seem significantly more daunting than self-hosting a website and some other online tools, but there seem to be some good <a href="https://hadoop.apache.org/docs/stable/hadoop-project-dist/hadoop-common/SingleCluster.html">guides</a>.
 	</p>
 
 
