--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		This website is in its early stages of development, so if you have any comments or questions, contact me.
 	</p>
 	<p>
-		I'll be adding a lot of content as my other projects mature, so check back. Like a lot of others, starting personal projects can be very exciting, and I often get a lot done initally. Finishing up that last 10-50% seems like a much larger task than it is. Having somethere to put what I've done seems to be motivating me to really put the time in to finish up what I'd previously started.
+		I'll be adding a lot of content as my other projects mature, so check back. Like a lot of others experience, starting personal projects can be very exciting, and I often get a lot done initally. Finishing up that last 10-50% seems like a much larger task than it is and there are always new exciting things to discover and try out. Having somethere to put what I've done seems to be motivating me to really put the time in to finish up what I'd previously started.
 	</p>
 	<p>
 		Building web applets is surprisingly simple due to the sophisticated tools that others have built. I can now access some of analysis tools I've made just by going on a website.
